src/_assets/css/exceptions/_theme-overrides.css
/* ... */
html[data-theme='vintage'] {
	.homepage-logo {
		--HOME-logo-text-transform: uppercase;
		--HOME-logo-text-scaling: 0.75;
	}

	.homepage-photo {
		--HOME-photo-border-width: 0px;
		border-radius: var(--size-m);
		background: var(--color-heading);
	}

	.hero-heading {
		text-shadow: 0 -1px 0 white;
	}

	hr:where(:not(.hero-like)) {
		block-size: 19px;

		background: linear-gradient(
			0deg,
			oklch(80% 18% 209) 0 4px,
			#0000 0 5px,
			oklch(70% 30% 121) 0 9px,
			#0000 0 10px,
			oklch(68% 75% 100) 0 14px,
			#0000 0 15px,
			oklch(59% 56% 26) 0 19px
		);

		/* This will be a lot easier with corner-shape: notch */
		clip-path: polygon(
			4px 0,
			calc(100% - 4px) 0,
			calc(100% - 4px) 4px,
			100% 4px,
			100% calc(100% - 4px),
			calc(100% - 4px) calc(100% - 4px),
			calc(100% - 4px) 100%,
			4px 100%,
			4px calc(100% - 4px),
			0 calc(100% - 4px),
			0 4px,
			4px 4px
		);
	}

	.header-link {
		&[aria-current='page'] {
			--LINK-underline-color: currentColor;
		}
	}

	.button:is(:active) {
		--CTA-box-shadow: 0 1px 1px #0003, inset 0 -2px 2px #954a4a, inset 0 2px 2px var(--color-accent);
	}

	.card a:is(:hover, :focus-visible) {
		--LINK-color: var(--color-surface-alt);
		--LINK-underline-color: var(--color-heading);
	}

	.signoff :any-link {
		--LINK-color: var(--color-surface-alt);
		--LINK-underline-color: var(--color-canvas);

		&:is(:hover, :focus-visible) {
			--LINK-color: var(--color-canvas);
			--LINK-underline-color: var(--color-heading);
		}
	}

	.announcement {
		background-color: var(--color-text);
		box-shadow: inset 0 1px 0 var(--color-surface-alt);
	}
}

html[data-theme='quill'] {
	.homepage-logo {
		--HOME-logo-name-color: var(--color-accent);
	}

	.hero-heading {
		text-shadow: 0 1px 0 white;
	}

	.expander-content {
		--CODE-bg: var(--color-canvas);
	}

	.image-gallery > figure > figcaption {
		background-color: var(--color-surface);
	}

	hr:where(:not(.hero-like)) {
		position: relative;
		overflow: visible;

		block-size: 1px;

		background: var(--color-text);

		&::after {
			content: '';

			position: absolute;
			inset: 0;

			block-size: 2rem;
			inline-size: 2rem;
			margin: auto;

			background: inherit;
			mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='221.8' height='493.3' viewBox='0 0 221.8 493.3'%3E%3Cpath d='M18 46s14-14 28-20 21-16 45-16 43 15 58 30c0 13 6 22 12 32 0 0 24 6 30 69 0 0 21 6 3 109s-27 80-27 80 5 78 12 109-2 38-26 22c0 0-37 32-34-17s0-146-24-177c0 0-40-45-47-88s-12-59 13-97c0 0-5-20-8-24S31 44 24 44l-6 2Z'/%3E%3C/svg%3E%0A")
				no-repeat center / auto 100%;
		}
	}
}
/* ... */

